--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "npm": "^3.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "eslint": "eslint --config ./node_modules/eslint-config-dx/.eslintrc --ext .js ./src"
+    "test": "npm run eslint && npm run jest",
+    "jest": "jest",
+    "eslint": "eslint --config ./node_modules/eslint-config-dx/.eslintrc --ext .js ./src",
+    "start": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -20,7 +22,13 @@
     "url": "https://github.com/devex-web-frontend/dx-util/issues"
   },
   "homepage": "https://github.com/devex-web-frontend/dx-util#readme",
-  "dependencies": {
+  "dependencies": {},
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest"
+  },
+  "devDependencies": {
+    "babel": "^5.8.34",
+    "babel-jest": "^5.3.0",
     "eslint": "^1.10.1",
     "eslint-config-dx": "github:devex-web-frontend/eslint-config-dx"
   }
