--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
   },
   "homepage": "https://github.com/devex-web-frontend/dx-util#readme",
   "dependencies": {
-    "esdoc": "^0.4.3"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest"
   },
   "devDependencies": {
-    "babel": "^5.8.34",
+    "babel-eslint": "^4.1.6",
     "babel-jest": "^5.3.0",
+    "esdoc": "^0.4.3",
     "eslint": "^1.10.1",
-    "eslint-config-dx": "devex-web-frontend/eslint-config-dx"
+    "eslint-config-dx": "github:devex-web-frontend/eslint-config-dx"
   }
 }
