fixed npm 2.x.x compatibility

--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "babel-jest": "^5.3.0",
     "esdoc": "^0.4.3",
     "eslint": "^1.10.1",
-    "eslint-config-dx": "github:devex-web-frontend/eslint-config-dx"
+    "eslint-config-dx": "devex-web-frontend/eslint-config-dx"
   }
 }
