--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "npm": "^3.0.0"
   },
   "scripts": {
+    "postinstall": "bower install",
     "test": "npm run eslint && npm run jest",
     "jest": "jest",
     "eslint": "eslint --config ./node_modules/eslint-config-dx/.eslintrc --ext .js ./src",
     "esdoc": "esdoc -c ./config/esdoc.js",
-    "start": "jest --watch"
+    "start": "jest --watch",
+    "bower": "bower"
   },
   "repository": {
     "type": "git",
@@ -23,14 +25,14 @@
     "url": "https://github.com/devex-web-frontend/dx-util/issues"
   },
   "homepage": "https://github.com/devex-web-frontend/dx-util#readme",
-  "dependencies": {
-  },
+  "dependencies": {},
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.6",
     "babel-jest": "^5.3.0",
+    "bower": "^1.6.6",
     "esdoc": "^0.4.3",
     "eslint": "^1.10.1",
     "eslint-config-dx": "devex-web-frontend/eslint-config-dx",
