--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "esdoc": "^0.4.3",
     "eslint": "^1.10.1",
     "eslint-config-dx": "devex-web-frontend/eslint-config-dx",
-    "jest-cli": "^0.4.19"
+    "jest-cli": "^0.4.19",
+    "react": "^0.14.7"
+  },
+  "peerDependencies": {
+    "react": "*"
   }
 }
