--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "eslint": "eslint --config ./node_modules/eslint-config-dx/.eslintrc --ext .js ./src",
     "esdoc": "esdoc -c ./config/esdoc.js",
     "start": "jest --watch",
-    "bower": "bower"
+    "bower": "bower",
+    "dx-flow": "dx-flow"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "babel-eslint": "^4.1.6",
     "babel-jest": "^5.3.0",
     "bower": "^1.6.6",
+    "dx-flow": "github:devex-web-frontend/dx-flow",
     "esdoc": "^0.4.3",
     "eslint": "^1.10.1",
     "eslint-config-dx": "devex-web-frontend/eslint-config-dx",
