Revert "upgrade bem decorator to inject modifiers"
This reverts commit 7963392e983617b938b7c5a13ce35d0e1eb0c2d4.

--- a/package.json
+++ b/package.json
@@ -38,10 +38,6 @@
     "esdoc": "^0.4.3",
     "eslint": "^1.10.1",
     "eslint-config-dx": "devex-web-frontend/eslint-config-dx",
-    "jest-cli": "^0.4.19",
-    "react": "^0.14.7"
-  },
-  "peerDependencies": {
-    "react": "*"
+    "jest-cli": "^0.4.19"
   }
 }
