--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-  "stage": 0
+  "presets": [
+    "es2015"
+  ],
+  "plugins": [
+    "transform-decorators-legacy",
+    "transform-class-properties"
+  ]
 }
