--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest"
   },
   "devDependencies": {
-    "babel-eslint": "^4.1.6",
-    "babel-jest": "^5.3.0",
-    "bower": "^1.6.6",
+    "babel-eslint": "^6.0.4",
+    "babel-jest": "12.0.2",
+    "babel-plugin-transform-class-properties": "^6.8.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.6.0",
+    "bower": "^1.7.9",
     "dx-flow": "github:devex-web-frontend/dx-flow",
-    "esdoc": "^0.4.3",
+    "esdoc": "^0.4.7",
     "eslint": "^1.10.1",
-    "eslint-config-dx": "devex-web-frontend/eslint-config-dx",
-    "jest-cli": "^0.4.19"
+    "eslint-config-dx": "github:devex-web-frontend/eslint-config-dx",
+    "jest-cli": "12.0.2"
   }
 }
