--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dx-util",
-  "version": "0.10.2",
-  "description": "Common utilities fro dx-projects",
+  "version": "0.10.3",
+  "description": "Common utilities for dx-projects",
   "main": "./src/",
   "engines": {
     "npm": "^3.0.0"
