--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "url": "https://github.com/devex-web-frontend/dx-util/issues"
   },
   "homepage": "https://github.com/devex-web-frontend/dx-util#readme",
-  "dependencies": {},
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest"
   },
@@ -35,12 +34,13 @@
     "babel-jest": "12.0.2",
     "babel-plugin-transform-class-properties": "^6.8.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.6.0",
     "bower": "^1.7.9",
     "dx-flow": "github:devex-web-frontend/dx-flow",
-    "esdoc": "^0.4.7",
     "eslint": "^1.10.1",
     "eslint-config-dx": "github:devex-web-frontend/eslint-config-dx",
-    "jest-cli": "12.0.2"
+    "jest-cli": "12.0.2",
+    "typhonjs-node-esdoc": "^0.2.1"
   }
 }
