--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.6.0",
     "bower": "^1.7.9",
-    "dx-flow": "github:devex-web-frontend/dx-flow",
-    "dx-lint": "github:devex-web-frontend/dx-lint",
+    "dx-flow": "https://github.com/devex-web-frontend/dx-flow",
+    "dx-lint": "https://github.com/devex-web-frontend/dx-lint",
     "esdoc": "^0.4.7",
     "esdoc-es7-plugin": "0.0.3",
     "eslint": "~3.2.2",
